welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:5: error: value lenght is not a member of Array[java.awt.Color]
  for( i<-0 to C.lenght-1 )
                 ^Array1:26: error: not found: value C
  for(i <- C )
           ^Array1:28: error: not found: value setBrosseCouleur
    setBrosseCouleur(i)
    ^